force-app/main/default/objects/Case/fields/Access_to_Sites__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Sites__c</fullName>
    <label>Access to Sites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>VoIP - Ashburn</fullName>
            </value>
            <value>
                <fullName>VoIP - Atlanta 2</fullName>
            </value>
            <value>
                <fullName>VoIP - Aurora</fullName>
            </value>
            <value>
                <fullName>VoIP - Cincinnati</fullName>
            </value>
            <value>
                <fullName>VoIP - Denver</fullName>
            </value>
            <value>
                <fullName>VoIP - Portland</fullName>
            </value>
            <value>
                <fullName>VoIP - Salt Lake City</fullName>
            </value>
            <value>
                <fullName>VoIP - San Jose</fullName>
            </value>
            <value>
                <fullName>VoIP - Sao Paulo</fullName>
            </value>
            <value>
                <fullName>VoIP - Tejon</fullName>
            </value>
            <value>
                <fullName>VoIP - Toronto</fullName>
            </value>
            <value>
                <fullName>VoIP - ViaWest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>