force-app/main/default/objects/Case/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Convey</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Webcast</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Webinar</fullName>
            </value>
            <value>
                <fullName>GoToWebcast</fullName>
            </value>
            <value>
                <fullName>Other Reseller</fullName>
            </value>
            <value>
                <fullName>PowWowNow Webcast</fullName>
            </value>
            <value>
                <fullName>PowWowNow Webinar</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>