force-app/main/default/objects/Case/fields/Actual_Restore_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Restore_Time__c</fullName>
    <label>Actual Restore Time</label>
    <type>DateTime</type>
</CustomField>