force-app/main/default/objects/Case/fields/Additional_Status_Metric__c.field-meta.xml
<CustomField>
    <fullName>Additional_Status_Metric__c</fullName>
    <label>Additional Status Metric</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issued as Open/Restored</fullName>
            </value>
            <value>
                <fullName>Status Page Updated</fullName>
            </value>
            <value>
                <fullName>Vendor Ticket Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>