force-app/main/default/objects/Case/fields/Admin_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_Portal_ID__c</fullName>
    <label>Admin Portal ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>