force-app/main/default/objects/Case/fields/AdminSearchString__c.field-meta.xml
<CustomField>
    <fullName>AdminSearchString__c</fullName>
    <description>No FLS is granted, this field is updated by a WFR that copies over lookup values so that they can be used for searching and getting case results.</description>
    <label>Admin: Search String</label>
    <type>TextArea</type>
</CustomField>