force-app/main/default/objects/Case/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Tier 1 Agent&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>