force-app/main/default/objects/Case/fields/AgileEpic__c.field-meta.xml
<CustomField>
    <fullName>AgileEpic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agile Epic</label>
    <referenceTo>AgileEpic__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>