force-app/main/default/objects/Case/fields/AgileSprint__c.field-meta.xml
<CustomField>
    <fullName>AgileSprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agile Sprint</label>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>