force-app/main/default/objects/Case/fields/AgileStatus__c.field-meta.xml
<CustomField>
    <fullName>AgileStatus__c</fullName>
    <label>Agile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
                <default>true</default>
                <label>To Do</label>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Peer Reviewed</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>