force-app/main/default/objects/Case/fields/AgileTester__c.field-meta.xml
<CustomField>
    <fullName>AgileTester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agile Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agile_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>