force-app/main/default/objects/Case/fields/Area_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Focus__c</fullName>
    <label>Area of Focus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audio Integration</fullName>
            </value>
            <value>
                <fullName>Audio Integration Support</fullName>
            </value>
            <value>
                <fullName>Audio Support</fullName>
            </value>
            <value>
                <fullName>Client Education/Request</fullName>
            </value>
            <value>
                <fullName>Event Support</fullName>
            </value>
            <value>
                <fullName>Mobile Support</fullName>
            </value>
            <value>
                <fullName>Recording Support</fullName>
            </value>
            <value>
                <fullName>Toolbar Support</fullName>
            </value>
            <value>
                <fullName>UCaaS Support</fullName>
            </value>
            <value>
                <fullName>Video Support</fullName>
            </value>
            <value>
                <fullName>VRC (Video Room Connector) Support</fullName>
            </value>
            <value>
                <fullName>Web Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>