force-app/main/default/objects/Case/fields/Assigned_Resolver_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resolver_Group__c</fullName>
    <label>Assigned Resolver Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PGi-Case-AP-Facilities</fullName>
            </value>
            <value>
                <fullName>PGi-Case-AP-Fraud</fullName>
            </value>
            <value>
                <fullName>PGi-Case-AP-Tier 1-Care (Attended)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-AP-Tier 1-Care (Automated)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-AP-Tier 1-Care (Japanese Language)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-Care-Video Ops</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Branding&amp;Conf Email</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Employee Serv</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Facilities</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Fraud</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Tier 1-CS (Attended)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Tier 1-CS (Audio)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Tier 1-CS (Enhanced Serv)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Tier 1-CS (India)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-EU-Tier 1- CS (Schedule Team)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Aspect Support</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Audio Projects</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Business Intelligence (BI)</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Event Production</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Global NOC</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-GM Tools&amp;Integration Prod</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-GM Tools&amp;Integration Proj</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-iMeet Agenday&amp;Chat Projec</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-InfoSec</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-JIRA Support</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Knowledge Base TW</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-PeopleSoft Support</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-People Support</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-QA/DEV Lab</fullName>
            </value>
            <value>
                <fullName>PGi-Case-GL-Tier 1-Video Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>