force-app/main/default/objects/Case/fields/Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Date__c</fullName>
    <label>Authorization Date</label>
    <type>Date</type>
</CustomField>