force-app/main/default/objects/Case/fields/Authorized_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person_Name__c</fullName>
    <label>Authorized Person Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>