force-app/main/default/objects/Case/fields/Auto_Generated_For_Case__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated_For_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Generated For Case #</label>
    <type>Checkbox</type>
</CustomField>