force-app/main/default/objects/Case/fields/Average_SLA_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Average_SLA_in_Minutes__c</fullName>
    <label>Average SLA in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>