force-app/main/default/objects/Case/fields/Average_SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_SLA_Time__c</fullName>
    <label>Average SLA Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>