force-app/main/default/objects/Case/fields/Bill_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You must enter the ID of the Client record, Names will not return any result.</inlineHelpText>
    <label>Bill To Client</label>
    <referenceTo>PGi_Client__c</referenceTo>
    <relationshipLabel>Cases (Bill To Client)</relationshipLabel>
    <relationshipName>Cases_of_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>