force-app/main/default/objects/Case/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>