force-app/main/default/objects/Case/fields/BillingSupportOutcome__c.field-meta.xml
<CustomField>
    <fullName>BillingSupportOutcome__c</fullName>
    <label>Billing Support Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved &amp; Posted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>