force-app/main/default/objects/Case/fields/Bridge_Name__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Name__c</fullName>
    <label>Bridge Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>