force-app/main/default/objects/Case/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Other Browser</fullName>
            </value>
            <value>
                <fullName>Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Google Chrome</fullName>
            </value>
            <value>
                <fullName>Web/Desktop App</fullName>
            </value>
            <value>
                <fullName>Unknown/Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>