force-app/main/default/objects/Case/fields/BTN_ATN__c.field-meta.xml
<CustomField>
    <fullName>BTN_ATN__c</fullName>
    <label>BTN/ATN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>