force-app/main/default/objects/Case/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUS/NZL</fullName>
            </value>
            <value>
                <fullName>BGT</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>ECT</fullName>
            </value>
            <value>
                <fullName>GBR</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>IMT</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>JPN</fullName>
            </value>
            <value>
                <fullName>KOR</fullName>
            </value>
            <value>
                <fullName>MYS</fullName>
            </value>
            <value>
                <fullName>NZL</fullName>
            </value>
            <value>
                <fullName>SGP</fullName>
            </value>
            <value>
                <fullName>SGPPC</fullName>
            </value>
            <value>
                <fullName>TAU</fullName>
            </value>
            <value>
                <fullName>TCA</fullName>
            </value>
            <value>
                <fullName>THK</fullName>
            </value>
            <value>
                <fullName>TUS</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>