force-app/main/default/objects/Case/fields/Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Date_Time__c</fullName>
    <description>UCaaS Support tab</description>
    <label>Call Date/Time</label>
    <type>DateTime</type>
</CustomField>