force-app/main/default/objects/Case/fields/Call_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Call_Recorded__c</fullName>
    <label>Call Recorded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>