force-app/main/default/objects/Case/fields/Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Internal Employee</fullName>
            </value>
            <value>
                <fullName>Moderator/Host</fullName>
            </value>
            <value>
                <fullName>Non-Customer</fullName>
            </value>
            <value>
                <fullName>Participant/Customer</fullName>
            </value>
            <value>
                <fullName>Reseller/Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>