force-app/main/default/objects/Case/fields/Case_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment_Date_Time__c</fullName>
    <label>Case Assignment Date/Time</label>
    <type>DateTime</type>
</CustomField>