force-app/main/default/objects/Case/fields/Case_Opened_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Opened_By__c</fullName>
    <description>If filled in, this represents id of user that initially created and reassigned case.</description>
    <inlineHelpText>ID of user that initially created and reassigned case.</inlineHelpText>
    <label>Case Opened By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>