force-app/main/default/objects/Case/fields/Case_Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Notes__c</fullName>
    <inlineHelpText>This is used to pass along customer notes via email and case resolution notes when closing a case.</inlineHelpText>
    <label>Customer Facing Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>