force-app/main/default/objects/Case/fields/Case_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Support_Type__c</fullName>
    <label>Case Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bug/Fix</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Collaboration_Request</fullName>
                <label>Collaboration Request</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Data Request</fullName>
            </value>
            <value>
                <fullName>Distribution List</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Generic Request</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Community</fullName>
            </value>
            <value>
                <fullName>iMeet Community</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PGiKNOW</fullName>
            </value>
            <value>
                <fullName>PGi Support Site</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Shared Mailbox</fullName>
            </value>
            <value>
                <fullName>Technical Support Request</fullName>
            </value>
            <value>
                <fullName>Zendesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>