force-app/main/default/objects/Case/fields/CaseOwnersRegion__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnersRegion__c</fullName>
    <formula>TEXT(Owner:User.User_Region__c)</formula>
    <label>Case Owner&#39;s Region</label>
    <type>Text</type>
</CustomField>