force-app/main/default/objects/Case/fields/Caused_by_Change__c.field-meta.xml
<CustomField>
    <fullName>Caused_by_Change__c</fullName>
    <label>Caused by Change?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>