force-app/main/default/objects/Case/fields/Child_Cases__c.field-meta.xml
<CustomField>
    <fullName>Child_Cases__c</fullName>
    <inlineHelpText>Counts the # of related Cases.  Note: For cases created by email, an external reply to the original thread creates a child case.</inlineHelpText>
    <label>Child Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>