force-app/main/default/objects/Case/fields/Client_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Client_Carrier__c</fullName>
    <label>Client Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>