force-app/main/default/objects/Case/fields/Client_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Client_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Contacted</label>
    <type>Checkbox</type>
</CustomField>