force-app/main/default/objects/Case/fields/Client_s_Country__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Country__c</fullName>
    <description>UCaaS - Global picklist - do NOT unrestrict!!</description>
    <label>Client&apos;s Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>