force-app/main/default/objects/Case/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>