force-app/main/default/objects/Case/fields/Closed_Queue__c.field-meta.xml
<CustomField>
    <fullName>Closed_Queue__c</fullName>
    <label>Closed Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>