force-app/main/default/objects/Case/fields/COB_Copy_of_Bill__c.field-meta.xml
<CustomField>
    <fullName>COB_Copy_of_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COB/Copy of Bill</label>
    <type>Checkbox</type>
</CustomField>