force-app/main/default/objects/Case/fields/Cody_Test__c.field-meta.xml
<CustomField>
    <fullName>Cody_Test__c</fullName>
    <formula>IF(
IsClosed = false, 
CreatedDate, 
ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cody Test</label>
    <type>Date</type>
</CustomField>