force-app/main/default/objects/Case/fields/Comments_from_CM_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_CM_Reservations__c</fullName>
    <inlineHelpText>Comments added to ticket created from link in Call Manager and iGLOO</inlineHelpText>
    <label>Comments from CM/Reservations</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>