force-app/main/default/objects/Case/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Requestor&apos;s Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>