force-app/main/default/objects/Case/fields/Computer_Name__c.field-meta.xml
<CustomField>
    <fullName>Computer_Name__c</fullName>
    <label>Computer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>