force-app/main/default/objects/Case/fields/Configuration_Date__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Date__c</fullName>
    <description>This is based on the FlightReady type and populated bu the IC</description>
    <label>Configuration Date</label>
    <type>Date</type>
</CustomField>