force-app/main/default/objects/Case/fields/Confirmed_Production_Defect__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Production_Defect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Production Defect</label>
    <type>Checkbox</type>
</CustomField>