force-app/main/default/objects/Case/fields/Count_of_Call_Logs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Call_Logs__c</fullName>
    <label>Count of Call Logs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>