force-app/main/default/objects/Case/fields/Count_of_Outbound_Emails__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Outbound_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Outbound Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>