force-app/main/default/objects/Case/fields/Count_of_Outbound_Emails_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Outbound_Emails_within_SLA__c</fullName>
    <label>Count of Outbound Emails within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>