force-app/main/default/objects/Case/fields/Count_of_Secure_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Secure_Attachments__c</fullName>
    <label>Count of Secure Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>