force-app/main/default/objects/Case/fields/Create_Eng_Issue__c.field-meta.xml
<CustomField>
    <fullName>Create_Eng_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to open an issue with engineering for triage.</inlineHelpText>
    <label>Create Engineering Issue</label>
    <type>Checkbox</type>
</CustomField>