force-app/main/default/objects/Case/fields/CSR_Customer_Service_Record__c.field-meta.xml
<CustomField>
    <fullName>CSR_Customer_Service_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR/Customer Service Record</label>
    <type>Checkbox</type>
</CustomField>