force-app/main/default/objects/Case/fields/Customer_s_Case_Number_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Case_Number_for_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer&apos;s Case Number for Review</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Customer&apos;s Case Number for Review)</relationshipLabel>
    <relationshipName>CaseIncidentReview</relationshipName>
    <type>Lookup</type>
</CustomField>