force-app/main/default/objects/Case/fields/Customer_s_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Operating_System__c</fullName>
    <label>Customer&apos;s Operating System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>