force-app/main/default/objects/Case/fields/Customer_Symtoms__c.field-meta.xml
<CustomField>
    <fullName>Customer_Symtoms__c</fullName>
    <label>Customer Symtoms</label>
    <type>TextArea</type>
</CustomField>