force-app/main/default/objects/Case/fields/Description_Preview__c.field-meta.xml
<CustomField>
    <fullName>Description_Preview__c</fullName>
    <label>Description Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>