force-app/main/default/objects/Case/fields/Desired_Barbell_Name__c.field-meta.xml
<CustomField>
    <fullName>Desired_Barbell_Name__c</fullName>
    <inlineHelpText>Default is &quot;Audio Assistant&quot;</inlineHelpText>
    <label>Desired Barbell Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>