force-app/main/default/objects/Case/fields/Desired_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Desired_Due_Date_Time__c</fullName>
    <label>Desired Due Date/Time</label>
    <type>DateTime</type>
</CustomField>