force-app/main/default/objects/Case/fields/Device_Brand__c.field-meta.xml
<CustomField>
    <fullName>Device_Brand__c</fullName>
    <description>UCaaS</description>
    <label>UC Device Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>