force-app/main/default/objects/Case/fields/Device_Model__c.field-meta.xml
<CustomField>
    <fullName>Device_Model__c</fullName>
    <description>UCaaS</description>
    <label>UC Device Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>