force-app/main/default/objects/Case/fields/Dial_Out__c.field-meta.xml
<CustomField>
    <fullName>Dial_Out__c</fullName>
    <label>Dial Out?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>