force-app/main/default/objects/Case/fields/Does_Monitoring_Exist__c.field-meta.xml
<CustomField>
    <fullName>Does_Monitoring_Exist__c</fullName>
    <label>Does Monitoring Exist?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>