force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>In APAC, your request must be submitted a minimum of 15 business days before the RFP is due.  In North America, 10 business days are required.</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>